--- a/example_ExternalAssetBundle/example_ExternalAssetBundle/example_ExternalAssetBundle.csproj
+++ b/example_ExternalAssetBundle/example_ExternalAssetBundle/example_ExternalAssetBundle.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
@@ -30,4 +30,8 @@
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="call postbuild.bat $(TargetPath)" />
+  </Target>
 </Project>
