--- a/ExternalAssetBundle_ex/ExternalAssetBundle_ex/ExternalAssetBundle_ex.csproj
+++ b/ExternalAssetBundle_ex/ExternalAssetBundle_ex/ExternalAssetBundle_ex.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
-    <AssemblyName>Example_ExternalAssetBundle</AssemblyName>
+    <AssemblyName>ExternalAssetBundle_ex</AssemblyName>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>11</LangVersion>
-    <RootNamespace>Example_ExternalAssetBundle</RootNamespace>
+    <RootNamespace>ExternalAssetBundle_ex</RootNamespace>
 
-    <BepInExPluginName>Example_ExternalAssetBundle</BepInExPluginName>
-    <BepInExPluginGuid>com.orax.exampleexternalassetbundle</BepInExPluginGuid>
+    <BepInExPluginName>ExternalAssetBundle_ex</BepInExPluginName>
+    <BepInExPluginGuid>com.orax.externalassetbundleexample</BepInExPluginGuid>
 
     <RestoreAdditionalProjectSources>
       https://api.nuget.org/v3/index.json;
